[workspace]
members = ["monto-parenlang"]

[package]
authors = ["Nathaniel Ringo <remexre@gmail.com>"]
license = "Apache-2.0/MIT"
name = "monto"
version = "0.1.0"

[badges]
appveyor = { repository = "melt-umn/monto-rs" }
travis-ci = { repository = "melt-umn/monto-rs" }

[[bin]]
name = "monto-broker"
path = "src/bin/monto-broker.rs"

[[bin]]
name = "monto-list-products"
path = "src/bin/list-products.rs"

[dependencies]
clap = "^2.25.0"
dirs = "^0.3.1"
either = "^1.1.0"
error-chain = "^0.10.0"
futures = "^0.1.14"
hyper = "^0.11.0"
itertools = "^0.6.0"
lazy_static = "^0.2.8"
log = "^0.3.8"
regex = "^0.2.2"
semver = "^0.7.0"
serde = "^1.0.8"
serde_derive = "^1.0.8"
serde_json = "^1.0.2"
simple_logger = "^0.4.0"
tokio-core = "^0.1.8"
toml = "^0.4.2"
url = "^1.5.0"
void = "^1.0.2"
