[package]
authors = ["Nathaniel Ringo <remexre@gmail.com>"]
license = "Apache-2.0/MIT"
name = "monto-broker"
version = "0.1.0"

[[bin]]
doc = false
name = "monto-broker"

[dependencies]
dirs = "^0.3.1"
either = "^1.1.0"
error-chain = "^0.10.0"
futures = "^0.1.14"
hyper = "^0.11.0"
log = "^0.3.8"
monto = { path = ".." }
pretty_env_logger = "^0.1.1"
serde = "^1.0.8"
serde_derive = "^1.0.8"
tokio-core = "^0.1.8"
tokio-signal = "^0.1.2"
toml = "^0.4.2"
url = "^1.5.0"
void = "^1.0.2"

# serde_json = "*"
