[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
name = "monto3-broker"
version = "0.1.0"

[dependencies]
clap = "2.28.0"
dirs = "0.3.1"
either = "1.4.0"
error-chain = "0.11.0"
futures = "0.1.17"
hyper = "0.11.7"
itertools = "0.7.3"
log = "0.3.8"
mime = "0.3.5"
notify = "4.0.3"
pretty_logger = "0.1.8"
serde = "1.0.23"
serde_derive = "1.0.23"
serde_json = "1.0.6"
tokio-core = "0.1.10"
toml = "0.4.5"
url = "1.6.0"
void = "1.0.2"

[dependencies.monto3-client]
path = "../client"
version = "0.1.0"

[dependencies.monto3-common]
path = "../common"
version = "0.1.0"

[dependencies.monto3-service]
path = "../service"
version = "0.1.0"
