[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
name = "monto3-client"
version = "0.1.0"

[dependencies]
error-chain = "0.11.0"
futures = "0.1.17"
hyper = "0.11.7"
log = "0.3.8"
serde = "1.0.23"
serde_derive = "1.0.23"
serde_json = "1.0.6"
tokio-core = "0.1.10"
url = "1.6.0"

[dependencies.monto3-common]
path = "../common"
version = "0.1.0"

[dependencies.monto3-service]
path = "../service"
version = "0.1.0"
