[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
name = "monto3-loctrans"
version = "0.1.0"

[dependencies]
either = "1.3.0"
log = "0.3.8"
pretty_logger = "0.1.8"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.4"
tokio-core = "0.1.10"
void = "1.0.2"

[dependencies.monto3-common]
path = "../../common"

[dependencies.monto3-service]
path = "../../service"
